--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1> This is the index file </h1>
+<p> Hello, this is the homepage </p>
 {% endblock %}
